# aoc2024

./: Cargo.toml  justfile
day01/: Cargo.toml
day01/src/: main.rs
