[workspace]
members = ["day*"]
resolver = "2"

[profile.release]
debug = false
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols

[workspace.package]
authors = ["Andreas Gerlach"]
edition = "2021"
license = "MIT"
version = "0.1.0"

[profile.flamegraph]
inherits = "release"
debug = true
strip = false
